--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!--
- - Author: Frank Jia
- - Title: City View
- - Date: 2022-09-05
--->
+  -- Author: Frank Jia
+  -- Title: Carousel
+  -- Date: 2022-08-30
+  -->
 
 <!doctype html>
 <html lang="en">
@@ -11,20 +11,20 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mark2win CityView Project</title>
-    <link rel="stylesheet" href="city.css">
-    <script src="city.js" defer></script>
+    <title>carousel ver 2.0</title>
+    <link rel="stylesheet" href="css/carousel.css">
+    <script src="https://kit.fontawesome.com/8b72c5582b.js" crossorigin="anonymous" defer></script>
+    <script src="js/carousel.js" defer></script>
 </head>
 <body>
-<div class="searchBar">
-    <input type="text" id="inputCity" placeholder="Input city name...">
-    <button id="btnSearch">Search</button>
-</div>
-<div class="carousel">
-    <div class="gallery"></div>
-    <div class="nav">
-        <button class="btnNav prev"><</button>
-        <button class="btnNav next">&gt;</button>
+<div class="container">
+    <div class="carousel">
+        <img src="" alt="">
+        <div class="icon">
+            <i class="fa-solid fa-chevron-left prev"></i>
+            <i class="fa-solid fa-chevron-right next"></i>
+        </div>
+        <div class="btnBar"></div>
     </div>
 </div>
 </body>
